[package]
name = "localtime"
version = "0.0.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
strip = true
debug = false

[profile.profiling]
inherits = "release"
strip = false
debug = true

[[bin]]
name = "maivin-localtime"
path = "src/maivin/main.rs"

[[bin]]
name = "ros2-localtime"
path = "src/ros2/main.rs"
required-features = ["ros2"]

[features]
default = []
ros2 = ["r2r"]

[dependencies]
cdr = "0.2.4"
chrono = "0.4.39"
clap = { version = "4.5.31", features = ["derive", "env"] }
edgefirst-schemas = "1.2.4"
env_logger = "0.11.6"
libc = "0.2.170"
log = "0.4.26"
r2r = { version = "0.9.4", optional = true }
serde_json = "1.0.139"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time", "io-std"] }
zenoh = "1.2.1"
